# picow-freertos-sd-logger

./: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSFATConfig.h  README.md  debug_uart.c  debug_uart.h  debug_uart.pio  globals.h  hw_config.c  main.c  rtc.c  rtc.h
libraries/FreeRTOS+FAT+CLI/: CMakeLists.txt
libraries/FreeRTOS+FAT+CLI/portable/RP2040/: sd_card.c
libraries/FreeRTOS+FAT+CLI/src/: FreeRTOS_time.c
